<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Customer Survey</string>
    <string name="export">Export</string>
    <string name="action_settings">Settings</string>
    <string name="heading">CUSTOMER SURVEY</string>
     <string name="dutyfreestore">DUTY FREE STORE</string>
    <string name="descritpion">Dear customer, we at Bengaluru duty free shop are conducting a survey to increase the quality of services provided to you. Kindly take this survey and help us in rendering the best service to you. </string>
    <string name="subheading">The Shoping Destination</string>
    <string name="location">Location :</string>
    <string name="nationality">Nationality :</string>
    <string name="profession">Profession :</string>
    <string name="gender">Gender :</string>
    <string name="arriving_from">Arriving from:</string>
     <string name="airline">Airline :</string>
    <string name="age_group">Age Group :</string>
   
    <string name="q1">1.What is the purpose of your travel?</string>
    <string name="q2">2.What is the frequency of your travel in a year?</string>
    <string name="q3">3.Were you aware of the Duty Free shop in this airport?</string>
    <string name="q4">4.What Products did you buy?</string>
    <string name="q5">5.If we offer you the following product categories – would you consider purchasing ?What is the purpose of your travel?</string>
    <string name="q6">6.what would prompt you to purchase</string>
    <string name="q7">7.How would you rate your experience of Duty free Store,Bangalore against  your favorite Duty Free </string>
    <string name="q8">8.How would you rate your experience in this airport at;(on scale of 1 to 5, 1 being least and 5 being most satisfied your experience at)</string>
    <string name="thanks">Thank you for your valuable feedback.</string>

</resources>